# rust-internet2

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
addr/: Cargo.toml  README.md
addr/src/: encoding.rs  inet.rs  lib.rs  node.rs  remote.rs  server.rs
derive/: Cargo.toml
derive/examples/: peer_api.rs  test_lnp_api.rs  test_strict_encode.rs
derive/src/: api.rs  lib.rs  lightning_encoding.rs  lnp_api.rs  strict_encoding.rs  util.rs
derive/tests/: api_lightning.rs  api_strict.rs  lnp_api_lightning.rs  lnp_api_strict.rs
examples/: tlv.rs
inet2_addr/: Cargo.toml
inet2_addr/src/: encoding.rs  lib.rs
microservices/: Cargo.toml
microservices/src/: error.rs  format.rs  lib.rs  rpc_connection.rs  shell.rs
microservices/src/esb/: controller.rs  mod.rs
microservices/src/peer/: mod.rs  peer_connection.rs
microservices/src/rpc/: client.rs  mod.rs  server.rs
services/: Cargo.toml
services/src/: error.rs  lib.rs
services/src/esb/: controller.rs  mod.rs
services/src/peer/: mod.rs
services/src/rpc/: client.rs  mod.rs  server.rs
src/: lib.rs  test_helpers.rs
src/application/: mod.rs  peer_connection.rs  rpc_connection.rs
src/bp/: bip32.rs  blind.rs  chain.rs  descriptor.rs  hlc.rs  mod.rs  short_id.rs  slice32.rs  slip32.rs  strict_encoding.rs
src/bp/dbc/: types.rs
src/lnp/: mod.rs
src/lnp/application/: channel.rs  message.rs
src/lnp/application/payment/: channel.rs  types.rs
src/lnp/application/payment/constructors/: bolt3.rs
src/lnp/presentation/: encoding.rs
src/lnp/session/: local_node.rs  node_addr.rs
src/lnp/session/noise/: conduit.rs  handshake.rs  hkdf.rs
src/lnp/transport/: mod.rs  socket_addr.rs  zmqsocket.rs
src/paradigms/: mod.rs  strict_encoding.rs
src/presentation/: encoding.rs  error.rs  message.rs  mod.rs  payload.rs  sphinx.rs  tlv.rs  unmarshall.rs
src/session/: init.rs  local_node.rs  mod.rs  node_addr.rs  session.rs  transcoders.rs
src/session/noise/: act.rs  chacha.rs  conduit.rs  handshake.rs  hkdf.rs  mod.rs  transcoder.rs
src/standards/: lnpbp4.rs
src/transport/: brontide.rs  connect.rs  encrypted.rs  ftcp.rs  generic.rs  mod.rs  socket_addr.rs  unencrypted.rs  zeromq.rs  zmqsocket.rs
strict_encoding/: Cargo.toml
strict_encoding/derive/: Cargo.toml
strict_encoding/derive/src/: lib.rs
strict_encoding/src/: core.rs  lib.rs
tests/: brontide.rs  brontozaur.rs  noise_xk.rs  tlv.rs  zmq.rs
tests/tlv-failures/wrong_unknown_type/: mod.rs
