[package]
name = "internet2"
version = "0.5.16"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Rust implementation for the stack of Internet2 protocols"
repository = "https://github.com/internet2-org/rust-internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "tor", "noise-xk", "privacy", "cryptography"]
categories = ["network-programming", "cryptography", "encoding"]
readme = "README.md"
edition = "2018"
exclude = [".github", "derive", "contrib", "microservices", "addr"]

[lib]
name = "internet2"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[test]]
name = "noise_xk"
path = "tests/noise_xk.rs"
required-features = ["keygen"]

# Dependencies
# ============
[dependencies]
# Dependencies on other LNP/BP repositories
# -----------------------------------------
amplify = "3.9.1"
strict_encoding = { version = ">=1.7.6", default-features = false, features = ["derive"] }
lightning_encoding = ">=0.5.12"
inet2_addr = { version = "0.5.0", features = ["strict_encoding", "stringly_conversions"], path = "./addr" }
inet2_derive = { version = "0.5.0", default-features = false, optional = true, path = "./derive" }
# Dependencies on core rust-bitcoin & cryptography
# ------------------------------------------------
secp256k1 = "0.20.3"
bitcoin_hashes = "0.10.0"
chacha20 = "0.8.1"
chacha20poly1305 = "0.7"
# Core rust projects
# ------------------
# This strange naming is a workaround for cargo inability to define required
# features for a dependency. See
# <https://github.com/rust-lang/api-guidelines/issues/180> for the explanation
# and references.
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
lazy_static = "1.4"
# Networking deps
# ---------------
# These dependencies are used to provide support for networking URLs in
zmq = { version = "0.9.2", optional = true }
url_crate = { version = "2", optional = true, package = "url" }
urldecode = { version = "0.1.1", optional = true }

[dev-dependencies]
torut = "0.2.0"
strict_encoding_test = "1.7.4"
strict_encoding_derive = "1.7.6-beta.1"
compiletest_rs = "0.7.0"

[target.'cfg(target_os="android")'.dependencies]
zmq = { version = "0.9", features = ["vendored"], optional = true }

[target.'cfg(target_os="ios")'.dependencies]
zeromq-src = { version = "0.1", git = "https://github.com/LNP-BP/zeromq-src-rs", branch = "fix/cmake", optional = true }

# Features
# ========
[features]
# Listings
# --------
#   By default we use LNP with Tor support and URL support
default = ["tor", "url", "zmq", "derive"]
all = ["derive",
       # Serde
       "serde", "keygen",
       # Networking
       "tor", "url", "zmq", "websockets"]
# Exposing core rust componens
# ----------------------------
#   These also include re-assembly of necessary features from dependencies
serde = ["serde_crate", "serde_with", "amplify/serde",
         "inet2_addr/serde", "secp256k1/serde", "bitcoin_hashes/serde-std"]
derive = ["inet2_derive"]
keygen = ["secp256k1/rand-std"]
# Networking
# ----------
websockets = []
tor = ["inet2_addr/tor"]
url = ["url_crate", "urldecode"]

[workspace]
members = [".", "derive", "addr"]
default-members = [".", "derive", "addr"]
exclude = ["dep_test"]
