[package]
name = "inet2_addr"
version = "0.9.0-rc.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Internet2 addresses with support for Tor v3"
repository = "https://github.com/internet2-org/rust-internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "tor", "onion", "lnp-bp", "privacy"]
categories = ["network-programming", "cryptography", "encoding"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
name = "inet2_addr"
path = "src/lib.rs"

[dependencies]
amplify = "3.13.0"
strict_encoding = { version = "0.9.0-rc.2", optional = true }
lightning_encoding = { version = "0.9.0-rc.1", optional = true }
stringly_conversions_crate = { package = "stringly_conversions", version = "0.1.1", optional = true, features = ["alloc"] }
torut = { version = "0.2.1", optional = true }
secp256k1 = "0.24.2"
parse_arg = { version = "0.1.4", optional = true }
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true }

[features]
all = ["serde", "tor", "parse_arg", "stringly_conversions", "strict_encoding", "lightning_encoding", "keygen"]
default = ["stringly_conversions"]
serde = ["serde_crate", "torut/serialize",
    "serde_yaml", "serde_json", "toml",
    "secp256k1/serde",
    "stringly_conversions",
    "stringly_conversions_crate/alloc",
    "stringly_conversions_crate/serde_str_helpers"]
tor = ["torut", "parse_arg"]
keygen = ["secp256k1/rand-std"]
stringly_conversions = ["stringly_conversions_crate", "amplify/stringly_conversions"]
