[package]
name = "inet2_derive"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Derivation macros for Internet2-based crates"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "lnp-bp", "privacy", "cryptography", "proc-macro"]
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1.0.75"
proc-macro2 = "1"
amplify = "3.9.1"

[dev-dependencies]
amplify = "3.9.1"
internet2 = { path = ".." }
strict_encoding = { version = ">=1.7.6", default-features = false, features = ["derive"] }
lightning_encoding = ">=0.5.3"
secp256k1 = "0.20.3"