[package]
name = "inet2_derive"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Derivation macros for Internet2-based crates"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "lnp-bp", "privacy", "cryptography", "proc-macro"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1.0.75"
proc-macro2 = "1"
amplify = "3.12.1"

[dev-dependencies]
amplify = "3.12.1"
internet2 = { path = "..", default-features = false }
strict_encoding = { version = "0.8.0", default-features = false, features = ["derive"] }
lightning_encoding = "0.8.0"
secp256k1 = "0.22.1"