[package]
name = "inet2_addr"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Internet2 addresses with support for Tor v2, v3"
repository = "https://github.com/internet2-org/rust-internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "tor", "onion", "lnp-bp", "privacy"]
categories = ["network-programming", "cryptography", "encoding"]
readme = "README.md"
edition = "2018"

[lib]
name = "inet2_addr"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]

[dependencies]
amplify = "3"
amplify_derive = "2.4"
strict_encoding = { version = "1", optional = true }
stringly_conversions = { version = "0.1.1", optional = true, features = ["alloc"] }
torut = { version = "0.1.7", features = ["v2", "v3"], optional = true }
ed25519-dalek = { version = "1", optional = true }
parse_arg = { version = "0.1.4", optional = true }
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }

[features]
all = ["serde", "tor", "parse_arg", "stringly_conversions", "strict_encoding"]
default = ["stringly_conversions"]
serde = ["serde_crate", "torut/serialize",
    "serde_yaml", "serde_json", "toml",
    "stringly_conversions",
    "stringly_conversions/alloc",
    "stringly_conversions/serde_str_helpers"]
tor = ["torut/v3", "torut/v2", "ed25519-dalek", "parse_arg"]
vendored_openssl = ["torut/vendored_openssl"]
