[package]
name = "microservices"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP support crate for devloping microservices"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "microservices", "lnp-bp", "esb", "rpc"]
readme = "../README.md"
edition = "2018"

[lib]
name = "microservices"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
# LNP/BP libraries
amplify = "3"
amplify_derive = "2.4"
internet2 = "0.3"
strict_encoding = { version = "1", features = ["derive"] }
# Serialization & parsing
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true, features = ["hex"] }
toml = { version = "0.5", optional = true }
# Congig
settings = { version = "0.10", package = "config", optional = true }
dotenv = { version = "0.15", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
log = { version = "0.4", optional = true, features = ["max_level_trace", "release_max_level_debug"] }
env_logger = { version = "0.7", optional = true }
# Networking
zmq = { version = "0.9", optional = true }

# Recommended set of features:
# 1. Standalone node: `server` (=`node`+`shell`)
# 2. Cli to remote node: `cli` (auto includes `shell` and `integration`)
# 3. Mobile app talking to a server: `client`
# 4. Mobile app with embedded node: `embedded` (auto includes `client` + `node`)
# 5. Simple cli utility app: `shell`
[features]
# Server is a standalone application that runs daemon
server = ["node", "shell"]
# Feature is required for any applications that talks to daemon processes
# TODO: Consider converting this list of feature into non-optional dependecies
client = ["zmq", "log", "env_logger"]
# Embedded is an app that contains ndoe in itself and that talks to it through
# integration layer
embedded = ["client", "node"]
# Command-line application feature
cli = ["shell", "client", "serde"]
# Required for all apps that can be launched from command-line shell as binaries
# (i.e. both servers and cli)
shell = ["dotenv", "clap", "settings", "amplify/parse_arg", "serde",
         "log", "env_logger"]
# Besides server node can be run as a part of mobile app
# and other types of clients; thus `server` != `node`.
# This feature results in building with features not required for CLI
node = ["serde", "zmq", "log", "env_logger"]
serde = ["serde_crate", "serde_with", "amplify/serde", "internet2/serde", "toml"]
# TODO: Consider adding "rpc" feature which will be replacement for
#       any("node", "client") and will hold the features common for both
