[package]
name = "microservices"
version = "0.3.7"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP support crate for devloping microservices"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["internet2", "microservices", "lnp-bp", "esb", "rpc"]
readme = "../README.md"
edition = "2018"

[lib]
name = "microservices"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
# LNP/BP libraries
amplify = "3"
amplify_derive = "2.4"
lnp-core = { version = "0.3", optional = true }
internet2 = { version = "0.3.7", default-features = false, features = ["derive"]}
strict_encoding = { version = "1", default-features = false, features = ["derive"] }
# Serialization & parsing
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", optional = true, features = ["hex"] }
toml = { version = "0.5", optional = true }
# Congig
settings = { version = "0.10", package = "config", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.7"
# Networking
zmq_crate = { package = "zmq", version = "0.9", optional = true }

# Recommended set of features:
# 1. Standalone node: `server` (=`node`+`shell`)
# 2. Cli to remote node: `cli` (auto includes `shell` and `integration`)
# 3. Mobile app talking to a server: `client`
# 4. Mobile app with embedded node: `embedded` (auto includes `client` + `node`)
# 5. Simple cli utility app: `shell`
[features]
default = ["client", "tor"]
all = ["server", "cli", "tor", "serde", "peer"]

# Server is a standalone application that runs daemon
server = ["node", "shell"]
# Command-line application feature
cli = ["shell", "client", "serde"]

# Embedded is an app that contains embedded node and that talks to it through
# integration layer
embedded = ["client", "node"]
# Server node can be run as a part of mobile app and other types of clients;
# thus `server` != `node`.
# This feature results in building with features not required for command-line
node = ["serde", "zmq", "_config", "_rpc"]
# Feature is required for any applications that talks to daemon processes
client = ["zmq", "_rpc"]
# Required for all apps that can be launched from command-line shell as binaries
# (i.e. both servers and cli)
shell = ["clap", "settings", "amplify/parse_arg", "serde", "_config"]

# Internally used features for convenience
_config = []
_rpc = []

serde = ["serde_crate", "serde_with", "amplify/serde", "internet2/serde", "toml", "lnp-core/serde"]
peer = ["lnp-core"]
zmq = ["zmq_crate", "internet2/zmq"]
tor = ["internet2/tor"]
vendored_openssl = ["internet2/vendored_openssl"]
